--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-force-https": "^1.0.0",
+    "hashids": "^1.2.2",
     "log4js": "^5.0.0",
     "module-alias": "^2.2.1",
     "mysql2": "^1.6.5",
