--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "express-force-https": "^1.0.0",
+    "fs-extra": "^8.1.0",
     "hashids": "^1.2.2",
     "log4js": "^5.0.0",
-    "mkdirp": "^0.5.1",
     "module-alias": "^2.2.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.15.2",
