--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-force-https": "^1.0.0",
     "fs-extra": "^8.1.0",
     "hashids": "^1.2.2",
+    "jimp": "^0.8.1",
     "log4js": "^5.0.0",
     "module-alias": "^2.2.1",
     "mysql2": "^1.6.5",
