--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs-extra": "^8.1.0",
     "hashids": "^1.2.2",
     "log4js": "^5.0.0",
+    "mercadopago": "^1.3.0",
     "module-alias": "^2.2.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.15.2",
