--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bestzip": "^2.1.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "dotenv-cli": "^2.0.1",
     "ejs": "^2.6.2",
