--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mysql2": "^1.6.5",
     "sequelize": "^5.15.2",
     "sequelize-cli": "^5.5.0",
-    "unirest": "^0.6.0"
+    "unirest": "^0.6.0",
+    "url-join": "^4.0.1"
   },
   "_moduleAliases": {
     "@appSrc": "./app/src",
