--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mercadopago": "^1.3.0",
     "module-alias": "^2.2.1",
     "mysql2": "^1.6.5",
+    "node-cache": "^5.1.2",
     "sequelize": "^5.15.2",
     "sequelize-cli": "^5.5.0",
     "unirest": "^0.6.0",
